deploy docker container in AWS

--- a/docker_tutorial/sample-project/app/Dockerfile
+++ b/docker_tutorial/sample-project/app/Dockerfile
@@ -3,8 +3,8 @@ FROM node:13-alpine
 ENV MONGO_DB_USERNAME=mongoadmin \
     MONGO_DB_PWD=secret
 
-RUN mkdir -p /home/app
+RUN mkdir -p /home/node-app
 
-COPY ./app_f /home/app
+COPY ./app_f /home/node-app
 
 CMD ["node", "/home/app/server.js"]
